<resources>
    <string name="app_name" translatable="false">examen_moviles_1</string>
    <string name="titulo_juego">The muggles casino</string>
    <string name="nombre_jugador">Nombre del Jugador</string>
    <string name="hint_nombre_jugador">Ingrese su nombre</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="fondo_apuestas">Fondo de Apuestas</string>
    <string name="hint_fondo_apuestas">Ingrese su apuesta</string>
    <string name="cantidad_dados">Cantidad de Dados</string>
    <string name="ingresar">Ingresar</string>
    <string name="advertencia">Los juegos de azar pueden ser nocivos y adictivos. Juega con responsabilidad.</string>
    <string name="monto_disponible">Monto Disponible:</string>
    <string name="monto_apostado">Monto Apostado:</string>
    <string name="hint_monto_apostado">Ingrese su apuesta</string>
    <string name="lanzar_dados">Lanzar Dados</string>
    <string name="marca_apuesta">Marca tu Apuesta</string>
    <string name="estatus">Estatus</string>
    <string name="retirarse_juego">Retirarse del Juego</string>
</resources>